# vlcast

./: README.md
Backend/: .gitignore  package-lock.json  package.json
Backend/src/: calculateCRC8.js  frameManager.js  keygen.js  server.js
Backend/src/controllers/: auth.controller.js
Backend/src/public/: index.html  logado.html  login.html
Backend/src/public/css/: style.css
Backend/src/public/script/: script.js
Backend/src/routes/: auth.routes.js
Backend/src/service/: auth.service.js
Firmware/: .gitignore  CMakeLists.txt
Firmware/components/: CMakeLists.txt  checksum_8.c  checksum_8.h  http.c  http.h  network_manager.c  network_manager.h  wifi.c  wifi.h
Firmware/main/: CMakeLists.txt  Kconfig.projbuild  crypto.c  crypto.h  main.c  processar_bit.c  processar_bit.h  vSignalTask.c  vSignalTask.h
